# dnd-pc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO-review.md  Trunk.toml  build.rs  firestore.rules  index.html
.github/workflows/: deploy-preview.yml  deploy.yml
docs/: feature-transient-effects.md  leptos-i18n-untracked.md  plan-separate-logic-localization.md  spell-attribute-effects.md  transient-effects-catalog.md
docs/superpowers/plans/: 2026-04-04-ai-story-generator.md
docs/superpowers/specs/: 2026-04-04-ai-story-generator-design.md
locales/en/: main.ftl
locales/ru/: main.ftl
public/: index.json  manifest.json  styles.scss  sw.js
public/backgrounds/: acolyte.json  charlatan.json  entertainer.json  farmer.json  guard.json  guide.json  noble.json  sage.json
public/classes/: artificer.json  barbarian.json  bard.json  cleric.json  druid.json  fighter.json  index.json  monk.json  paladin.json  ranger.json  rogue.json  sorcerer.json  warlock.json  wizard.json
public/data/: effects.json  features.json  index.json  names.json
public/data/backgrounds/: acolyte.json  artisan.json  charlatan.json  criminal.json  entertainer.json  farmer.json  guard.json  guide.json  hermit.json  merchant.json  (+6 more)
public/en/: effects.json  features.json  index.json
public/races/: aasimar.json  dragonborn.json  drow.json  dwarf.json  forest-gnome.json  half-elf.json  half-orc.json  high-elf.json  hill-dwarf.json  human.json  lightfoot-halfling.json  mountain-dwarf.json  rock-gnome.json  stout-halfling.json  tiefling-abyssal.json  tiefling-chthonic.json  tiefling-infernal.json  tiefling.json  wood-elf.json
public/ru/: effects.json  features.json  index.json
public/spells/: artificer.json  bard.json  cleric.json  druid.json  paladin.json  ranger.json  sorcerer.json  warlock.json  wizard.json
scripts/: split_data.py
src/: ai.rs  constvec.rs  demap.rs  effective.rs  expr.rs  firebase.rs  hooks.rs  lib.rs  main.rs  names.rs  rules.rs  share.rs  storage.rs  vecset.rs
src/components/: ability_score_block.rs  ability_scores_panel.rs  apply_field_section.rs  args_modal.rs  background_field.rs  cast_button.rs  character_card.rs  character_header.rs  class_field.rs  class_fields_panel.rs  classes_section.rs  combat_panel.rs  datalist_input.rs  dice_input.rs  dice_pool_input.rs  effects_calc_modal.rs  entity_field.rs  equipment_panel.rs  expr_args_input.rs  expr_form.rs  expr_view.rs  features_panel.rs  icon.rs  language_switcher.rs  loader.rs  logo.rs  menu_modal.rs  mod.rs  modal.rs  navbar.rs  notes_panel.rs  panel.rs  personality_panel.rs  proficiencies_panel.rs  resource_slot.rs  saving_throws_panel.rs  session_header.rs  session_list.rs  session_nav.rs  skill_row.rs  (+9 more)
src/expr/: de.rs  error.rs  interpret.rs  mod.rs  ops.rs  parser.rs  stack.rs  tokenizer.rs  traits.rs
src/model/: ability.rs  attribute.rs  character.rs  combat.rs  die.rs  effects.rs  enums.rs  equipment.rs  feature.rs  identity.rs  mod.rs  money.rs  spell.rs
src/pages/: character_layout.rs  character_list.rs  character_sheet.rs  character_summary.rs  import_character.rs  mod.rs  not_found.rs
src/rules/: apply.rs  background.rs  cache.rs  class.rs  feature.rs  index.rs  labels.rs  locale.rs  mod.rs  race.rs  registry.rs  resolve.rs  species.rs  spells.rs  utils.rs
src/storage/: local.rs  migrate.rs  mod.rs  queue.rs  sync.rs
tests/: json_validation.rs
(+272 files in other folders)
