[package]
name = "dnd-pc"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.3"
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3", features = ["ServiceWorkerContainer", "Navigator", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
