[package]
name = "dnd-pc"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
getrandom = { version = "0.4.1", features = ["wasm_js"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
gloo-storage = "0.3"
gloo-net = "0.6"
reactive_stores = "0.3"
leptos-fluent = "0.3"
fluent-templates = "0.13"
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4", "js", "serde"] }
wasm-bindgen-futures = "0.4"
base64 = "0.22"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "ServiceWorkerContainer",
    "Navigator",
    "Window",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "FileReader",
    "File",
    "FileList",
    "BlobPropertyBag",
    "Location",
    "Clipboard",
    "MediaQueryList",
    "EventTarget",
    "ReadableStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "ReadableWritablePair",
    "Response",
] }
indexmap = "2.13.0"
regex = "1.12"
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
